# HealthMed

./: .env.app  HealthMed.md  README.md  docker-compose.yml
HealthMed/: Dockerfile  manage.py  pyproject.toml  requirements.txt  start.sh
HealthMed/doctors/: admin.py  backends.py  models.py  serializers.py  urls.py  views.py
HealthMed/doctors/migrations/: 0001_initial.py  0002_alter_doctor_last_login.py  0003_alter_doctor_last_login.py  0004_remove_article_title_image_link_article_publish_date_and_more.py  0005_alter_doctor_last_login.py
HealthMed/doctors/templates/doctors/: doctor_cabinet.html  login.html  register.html
HealthMed/healthmed/: asgi.py  settings.py  urls.py  wsgi.py
HealthMed/main_pages/: defs.py  urls.py  views.py
HealthMed/main_pages/templates/main_pages/: articles.html  index.html
HealthMed/static/doctors/js/: doctor-article.js  doctor-schedule.js
HealthMed/static/doctors/styles/: login.css  login.scss
HealthMed/static/main_pages/forms/: login_in.html  success.html
HealthMed/static/main_pages/js/: login-form.js  register-form.js
HealthMed/static/main_pages/styles/: footer.css  footer.css.map  footer.scss  forms.css  forms.css.map  forms.scss  header.css  header.scss  index.css  index.scss
HealthMed/static/users/js/: metro.min.js  (+2 more)
HealthMed/templates/: footer.html  header.html  imports.html
HealthMed/users/: admin.py  backends.py  classes.py  defs.py  models.py  serializers.py  urls.py  utils.py  validators.py  views.py
HealthMed/users/migrations/: 0001_initial.py  0002_consultation_status.py  0003_consultation_doctor.py
(+28 files in other folders)
